--- a/optionalPlugins/merge-annotation-operator/pom.xml
+++ b/optionalPlugins/merge-annotation-operator/pom.xml
@@ -9,15 +9,14 @@
     </parent>
 
     <groupId>com.affymetrix</groupId>
-    <artifactId>geometricMean</artifactId>
-    <version>${genometricMean-version}</version>
-    
+    <artifactId>merge-annotation-operator</artifactId>
+    <version>${merge-annotation-operator-version}</version>
     
     <packaging>jar</packaging>
 
-    <name>Geometric Mean</name>
+    <name>Merge Annotation Operator</name>
 
-    <dependencies>        
+    <dependencies>       
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.main</artifactId>
@@ -68,7 +67,7 @@
                     <archive>  
                         <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                     </archive>
-                    <outputDirectory>${project.parent.basedir}/extbundles</outputDirectory> 
+                    <outputDirectory>${project.parent.basedir}/extbundles/optional</outputDirectory> 
                 </configuration>
             </plugin>
             <plugin>
@@ -76,7 +75,7 @@
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>${project.parent.basedir}/extbundles</directory>
+                            <directory>${project.parent.basedir}/extbundles/optional</directory>
                             <includes>
                                 <include>${project.build.finalName}.jar</include>
                             </includes>
@@ -87,7 +86,8 @@
             </plugin>    
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>                
+                <artifactId>maven-bundle-plugin</artifactId>
+                
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -99,12 +99,13 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>  
+                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>     
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package/>
-                        <Bundle-Activator>com.gene.geometricmean.Activator</Bundle-Activator>
+                        <Bundle-Activator>com.gene.mergeannotationoperator.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-Description>operation to compute Geometric Mean on selected graph tracks</Bundle-Description>
+                        <Bundle-Description>Annotation Operator that merges selected annotation tracks.</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>            
