--- a/optionalPlugins/tutorial-helper/pom.xml
+++ b/optionalPlugins/tutorial-helper/pom.xml
@@ -9,13 +9,12 @@
     </parent>
 
     <groupId>com.affymetrix</groupId>
-    <artifactId>geometricMean</artifactId>
-    <version>${genometricMean-version}</version>
-    
+    <artifactId>tutorial-helper</artifactId>
+    <version>${tutorial-helper-version}</version>
     
     <packaging>jar</packaging>
 
-    <name>Geometric Mean</name>
+    <name>tutorial-helper</name>
 
     <dependencies>        
         <dependency>
@@ -61,14 +60,14 @@
     </dependencies>
 
     <build>
-        <plugins>   
+        <plugins> 
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>                
                 <configuration>
                     <archive>  
                         <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
                     </archive>
-                    <outputDirectory>${project.parent.basedir}/extbundles</outputDirectory> 
+                    <outputDirectory>${project.parent.basedir}/extbundles/optional</outputDirectory> 
                 </configuration>
             </plugin>
             <plugin>
@@ -76,7 +75,7 @@
                 <configuration>
                     <filesets>
                         <fileset>
-                            <directory>${project.parent.basedir}/extbundles</directory>
+                            <directory>${project.parent.basedir}/extbundles/optional</directory>
                             <includes>
                                 <include>${project.build.finalName}.jar</include>
                             </includes>
@@ -84,10 +83,11 @@
                         </fileset>
                     </filesets>
                 </configuration>
-            </plugin>    
+            </plugin>      
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>                
+                <artifactId>maven-bundle-plugin</artifactId>
+                
                 <extensions>true</extensions>
                 <executions>
                     <execution>
@@ -99,16 +99,16 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>  
+                    <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
                     <instructions>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Export-Package/>
-                        <Bundle-Activator>com.gene.geometricmean.Activator</Bundle-Activator>
+                        <Bundle-Activator>com.gene.tutorial-helper.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-Description>operation to compute Geometric Mean on selected graph tracks</Bundle-Description>
+                        <Bundle-Description>A plugin to allow the user to see widget ids to help develop tutorials</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>            
         </plugins>
     </build>
-
 </project>
