added property file reading to replace jenkins configuration storage of password

--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ ext.commonProps.load(new FileInputStream('core/common/src/main/resources/common.
 //remove minor version portion of version string
 version = commonProps.get('appVersion')
 
+//securely read in keystore info from disk
+ext.props = new Properties()
+ext.props.load(new FileInputStream(System.getProperty("user.home") + '/build.properties'))
+project.setProperty('props', ext.props)
+
 buildscript {
     repositories {
         mavenLocal()
@@ -41,8 +46,8 @@ task cleanOldBuild(type: Delete) {
 task media(dependsOn: cleanOldBuild, type: com.install4j.gradle.Install4jTask) {
     projectFile = file('distribution/igb.install4j')
     variables = [projectHomeDirectory: projectDir, igbVersion: version, codeBaseUrl: System.getProperty('codebaseUrl')]
-    macKeystorePassword = System.getProperty('macKeystorePassword')
-    winKeystorePassword = System.getProperty('macKeystorePassword')
+    macKeystorePassword = props.get('appleKeypass')
+    winKeystorePassword = props.get('appleKeypass')
 }
 
 clean {
